/*
 * $Id: ChangeLog,v 1.1839 2003/12/09 03:07:45 maurifull Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-12-09 19:35 UTC-0300 Mauricio Abre <maurifull@datafull.com>
  * source/rtl/dbedit.prg
    % Optimizations from Walter and me
      Changed For to For Each and IIf() to Do Case...End
    ! Refresh current row prior and after UserFunc call
      If UserFunc does screen i/o, refreshing current row restores right coords

2003-12-09 00:00 UTC-0300 Mauricio Abre <maurifull@datafull.com>
  * tests/dbedit.prg
    + Added temporary GET testing, future dbedit() will do it by itself

2003-12-08 18:53 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/hblog.prg
  * source/rtl/hblognet.prg
  * source/rtl/trpc.prg
  * source/rtl/trpccli.prg
  * source/vm/thread.c
    * Renamed CreateMutex() to HB_CreateMutex() to avoid conflict with Win api wrappers, and preserve namespace.

  * contrib/Whoo/source/TApplication.prg
  * contrib/what32/source/_winmisc.c
    * Corrected typo.

2003-12-08 23:37 UTC-0300 Mauricio Abre <maurifull@datafull.com>
  * source/rtl/dbedit.prg
    ! Fixed column titles to be Clipper compatible
      Clipper lets title empty when aHeader[column] == ""

2003-12-08 16:49 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbset.h
    * Revised order of HB_SET_STRUCT memebers so that members not available in Harbour are the the end of the structure.

2003-12-07 23:30 UTC-0300 Marcelo Lombardo <lombardo@uol.com.br>
  + source/rtl/readline.c
    + Added Text file reading functions
  * source/rtl/Makefile
  * makefile.bc
    + Compile new file readline.c
  + tests/rline1.prg
    + Small sample to new readline() function

2003-12-07 20:15 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/contrib/mysql/Makefile
    ! fixed include dirs to allow compilation on different distros
