@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1839 2003/12/09 03:07:45 maurifull Exp $
+ * $Id: ChangeLog,v 1.1840 2003/12/09 23:23:23 maurifull Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,15 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+
+2003-12-10 01:10 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
+  * source/rtl/regex.c
+    ! now all the parenthetized expression are parsed, also if one in-lined
+      parenthetisze optional expression results empty: the empty optional
+      expression is returned as an empty string. Before, the scan blocked at
+      first empty optional parenthetized expression, masking parenthesis
+      occouring afterwards.
 
 2003-12-09 19:35 UTC-0300 Mauricio Abre <maurifull@datafull.com>
   * source/rtl/dbedit.prg
